--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,10 +18,8 @@
 
 @media screen and (max-width: 880px) {
   .footer {
-    margin: 0;
-    padding-left: 19px;
-    padding-top: 48px;
-    padding-bottom: 36px;
+    padding: 48px 0 36px 0;
+    max-width: 282px;
   }
   .footer__copyright {
     font-size: 14px;
