--- a/blocks/header.css
+++ b/blocks/header.css
@@ -14,7 +14,9 @@
 
 @media screen and (max-width: 880px) {
   .header {
-    padding-left: 27px;
+    margin: 0;
+    height: 100%;
+    padding-top: 28px;
   }
   .header__logo {
     height: 24px;
