--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,28 +1,26 @@
 .footer {
+  font-family: "Inter", Arial, sans-serif;
+  padding: 67px 0 60px 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  color: #545454;
   max-width: 880px;
-  position: relative;
-  width: 100%;
-  padding-left: 0;
-  padding-top: 67px;
-  padding-bottom: 60px;
   margin: 0 auto;
 }
+
 .footer__copyright {
-  color: #545454;
-  font-family: "inter", arial, sans-serif;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 22px;
   margin: 0;
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 595px) {
   .footer {
     padding: 48px 0 36px 0;
     max-width: 282px;
   }
+
   .footer__copyright {
-    font-size: 14px;
     line-height: 17px;
+    font-size: 14px;
   }
 }
