--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,27 +1,27 @@
 .header {
-  max-width: 880px;
-  width: 100%;
-  margin-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-  align-items: center;
-}
-.header__logo {
-  height: 33px;
-  width: 173px;
-  margin-bottom: 41px;
-  margin-top: 45px;
+  color: white;
+  padding-top: 45px;
+  max-width: 880px;
+  min-height: 33px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 880px) {
+.header__logo {
+  margin-bottom: 41px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .header {
     margin: 0;
     height: 100%;
     padding-top: 28px;
   }
   .header__logo {
+    max-width: 126px;
     height: 24px;
-    width: 126px;
-    margin-bottom: 28px;
-    margin-top: 32px;
+    margin-bottom: 32px;
+    padding-left: 27px;
   }
 }
