--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,50 +1,47 @@
 .card {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   list-style: none;
   border-radius: 10px;
 }
-
 .card__image {
-  height: 282px;
   width: 282px;
-  border-radius: 10px 10px 0 0;
-}
-
-.card__image-title {
-  font-family: "Inter", Arial, sans-serif;
-  line-height: 29px;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 200px;
+  height: 282px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .card__description {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 20px 25px 25px;
-  background-color: #f2f2f2;
+  background-color: white;
   color: black;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 0 0 10px 10px;
 }
 
+.card__title {
+  font-size: 24px;
+  line-height: 1.2;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  /*flex: 1;*/
+  margin: 0;
+}
 .card__like-button {
-  background: transparent url(../images/like-button.svg) center no-repeat;
+  background: transparent url(../images/heart-Icon.svg) center no-repeat;
   width: 21px;
   height: 18px;
-  border-radius: 0 0 10px 10px;
   border: none;
-  transition: 1s;
 }
-
 .card__like-button:hover {
-  cursor: pointer;
-  transition: opacity 0.2s;
   opacity: 0.5;
+  cursor: pointer;
 }
