--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,26 +1,23 @@
 .footer {
-  font-family: "Inter", Arial, sans-serif;
-  padding: 67px 0 60px 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  color: #545454;
-  max-width: 880px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
 }
 
 .footer__copyright {
-  margin: 0;
+  color: #545454;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  margin: 67px auto 60px 0;
 }
 
-@media screen and (max-width: 595px) {
-  .footer {
-    padding: 48px 0 36px 0;
-    max-width: 282px;
-  }
-
+@media screen and (max-width: 768px) and (min-width: 320px) {
   .footer__copyright {
-    line-height: 17px;
     font-size: 14px;
+    line-height: 17px;
+    margin: 48px auto 36px 19px;
+    max-width: 282px;
   }
 }
