--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,27 +1,23 @@
 .header {
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-  color: white;
-  padding-top: 45px;
-  max-width: 880px;
-  min-height: 33px;
-  width: 100%;
-  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  border-bottom: solid 1px rgba(84, 84, 84, 0.7);
 }
 
 .header__logo {
-  margin-bottom: 41px;
+  max-width: 173px;
+  max-height: 33px;
+  margin-top: 45px;
+  margin-bottom: 40px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .header {
-    margin: 0;
-    height: 100%;
-    padding-top: 28px;
-  }
+@media screen and (max-width: 768px) and (min-width: 320px) {
   .header__logo {
     max-width: 126px;
-    height: 24px;
+    max-height: 24px;
+    margin-top: 28px;
     margin-bottom: 32px;
-    padding-left: 27px;
+    margin-left: 27px;
   }
 }
