--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,27 +1,32 @@
 .page {
   background-color: black;
-  color: white;
 }
-
 .page__section {
   max-width: 880px;
   width: 100%;
   position: relative;
   margin: 0 auto;
+  box-sizing: border-box;
+  color: white;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
 .page__content {
-  margin: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
-@media screen and (max-width: 568px) {
-  .page__content {
-    padding-left: 0;
-    padding-right: 0;
+@media screen and (max-width: 596px) {
+  .header {
+    width: 320px;
+    max-width: 100%;
+  }
+  .header__image {
+    width: 126px;
+    height: 24px;
+    margin-left: 27px;
+    padding-bottom: 32px;
+    margin-top: 28px;
   }
 }
