--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,46 +3,52 @@
   flex-direction: column;
   list-style: none;
   border-radius: 10px;
+  overflow: hidden;
+  max-width: 282px;
 }
-.card__image {
+
+.card__img {
   width: 282px;
   height: 282px;
-  border-radius: 10px 10px 0px 0px;
+  min-height: 282px;
+  object-fit: cover;
+}
+
+.card__img-title {
+  margin: 0;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 24px;  
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  line-height: 29px;
+  font-weight: 900;
+  max-width: 193px;
+
 }
 
 .card__description {
   display: flex;
   background-color: white;
   color: black;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px 20px;
   align-items: center;
   justify-content: space-between;
-  border-radius: 0 0 10px 10px;
+
 }
 
-.card__title {
-  font-size: 24px;
-  line-height: 1.2;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  font-family: "inter", arial, sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  /*flex: 1;*/
-  margin: 0;
-}
 .card__like-button {
-  background: transparent url(../images/heart-Icon.svg) center no-repeat;
+  background: transparent url("../images/like-inactive.svg") center no-repeat;
   width: 21px;
   height: 18px;
+  padding-right: 20px;
   border: none;
-}
-.card__like-button:hover {
-  opacity: 0.5;
-  cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 
+.card__like-button:hover {
+  opacity: 50%;
+  transition: 0.4s;
+  cursor: pointer;
+}
