--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,13 +1,19 @@
 .cards {
-  margin-top: 30px;
+  margin: 35px auto 0 auto;
+  display: grid;
+  max-width: 880px;
+  width: 100%;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 14px;
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
 }
 
 .cards__list {
   display: grid;
-  list-style-type: none;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px 17px;
+  gap: 20px 17px;
   padding: 0;
   margin: 0;
+  border-radius: 10px;
 }
