--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,23 +1,27 @@
 .header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border-bottom: solid 1px rgba(84, 84, 84, 0.7);
+  margin-top: 45px;
+  max-width: 880px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  grid-template-columns: repeat(auto-fit, 282px);
 }
 
 .header__logo {
-  max-width: 173px;
-  max-height: 33px;
-  margin-top: 45px;
-  margin-bottom: 40px;
+  width: 173px;
+  height: 33px;
+  padding-bottom: 41px;
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 879px) {
+  .header {
+    max-width: 581px;
+  }
   .header__logo {
-    max-width: 126px;
-    max-height: 24px;
-    margin-top: 28px;
-    margin-bottom: 32px;
     margin-left: 27px;
+    max-width: 126px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .header {
+    width: 100%;
   }
 }
