--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,74 +2,6 @@
   display: flex;
   align-items: center;
   padding-top: 40px;
-  padding-bottom: 47px;
-}
-.profile__info {
-  display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
-  margin-left: 28px;
-}
-.profile__edit-button {
-  background: transparent url(../images/profile-edit-button.svg) center
-    no-repeat;
-  height: 24px;
-  width: 24px;
-  grid-area: button;
-  border: 1px solid #ffffff;
-  margin-left: 18px;
-  display: flex;
-  align-self: center;
-}
-.profile__edit-button:hover {
-  opacity: 0.6;
-  cursor: pointer;
-}
-
-.profile__add-button {
-  background: transparent url(../images/add-icon\(11\).svg) center no-repeat;
-  width: 150px;
-  height: 50px;
-  margin-left: auto;
-  border: 2px solid #ffffff;
-  border-radius: 2px;
-  padding: 14px 64px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.profile__add-button:hover {
-  opacity: 0.6;
-  cursor: pointer;
-}
-
-.profile__title {
-  font-size: 42px;
-  line-height: 48px;
-  grid-area: title;
-  margin: 0;
-  font-family: "inter", arial, sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.profile__description {
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 400;
-  grid-area: description;
-  margin: 0;
-  margin-top: 7px;
-  font-family: "inter", arial, sans-serif;
-  font-style: normal;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .profile__image {
@@ -77,69 +9,124 @@
   width: 120px;
   border-radius: 50%;
   object-fit: cover;
-  background-position: center;
+  margin-right: 24px;
+}
+
+.profile__info {
+  display: grid;
+  grid-template-areas:
+    "title button"
+    "description description";
+  grid-template-columns: minmax(auto, 373px) auto;
+  grid-gap: 7px 17px;
+}
+
+.profile__title {
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 42px;
+  line-height: 48px;
+  font-weight: 500;
+  grid-area: title;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.profile__edit-button {
+  background: transparent url(../images/pointer-pen.svg) center no-repeat;
+  height: 24px;
+  width: 24px;
+  grid-area: button;
+  align-self: center;
+  border: 1px solid #fff;
+  padding: 0;
   margin: 0;
 }
-@media screen and (max-width: 780px) {
-  .profile__title {
-    font-size: 28px;
+.profile__edit-button:hover {
+  opacity: 60%;
+  transition: 0.02s;
+  cursor: pointer;
+}
+
+.profile__add-button {
+  background: transparent url(../images/button.svg) center no-repeat;
+  width: 150px;
+  height: 50px;
+  margin-left: auto;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+}
+
+.profile__add-button:hover {
+  opacity: 60%;
+  transition: 0.02s;
+  cursor: pointer;
+}
+
+.profile__description {
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 400;
+  grid-area: description;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 373px;
+}
+
+@media screen and (max-width: 879px) {
+  .profile {
+    max-width: 575px;
+    padding-top: 37px;
+    padding-bottom: 32px;
+  }
+  .profile__image {
+    margin-left: 0;
   }
   .profile__info {
-    grid-template-columns: minmax(auto, 300px) auto;
-  }
-  .profile__add-button {
-    width: 75;
-    margin-left: 10px;
-  }
-  .profile__edit-button {
-    width: 18px;
-    height: 18px;
-  }
-}
-@media screen and (max-width: 568px) {
-  .profile {
-    flex-direction: column;
-    text-align: center;
-    padding: 0;
+    margin-right: 0;
+    max-width: 240px;
   }
   .profile__title {
-    width: 196px;
     font-size: 22px;
     line-height: 27px;
+    max-width: 200px;
+    min-width: 170px;
+  }
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+  }
+  .profile__add-button {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width: 580px) {
+  .profile {
+    width: 100%;
+    margin: 0;
+    flex-direction: column;
+    padding-bottom: 1px;
+  }
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__description {
+    font-size: 14px;
+    line-height: 17px;
     text-align: center;
-    margin-top: 26px;
-    margin-bottom: 7px;
+  }
+  .profile__info {
+    justify-content: center;
+    gap: 14px 10px;
+    margin-top: 30px;
+    margin-bottom: 36px;
   }
   .profile__add-button {
     margin: 0 auto;
     width: 282px;
-    margin-top: 36px;
-    margin-bottom: 36px;
-  }
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    line-height: 17px;
-  }
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    margin: 0;
-  }
-  .profile__image {
-    margin-top: 38px;
-  }
-  .profile__edit-button {
-    margin-left: 10px;
-    margin-top: 14px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .profile__add-button {
-    justify-items: center;
   }
 }
