--- a/blocks/card.css
+++ b/blocks/card.css
@@ -98,62 +98,4 @@ function getCardElement(data) {
 
   //find the delete button
   //add the event listener to the delete button
-  //cardElement.remove();
-  const deleteButton = cardElement.querySelector(".card__delete-button");
-  deleteButton.addEventListener("click", () => {
-    cardElement.remove();
-  });
-
-  // add click listener to the cardImage element
-  //open modal with **previewImageModal - add it into the html
-
-  //function openModal(modal) {
-  //modal.classList.add("modal_opened");
-  //
-
-  cardImage.addEventListener("click", () => {
-    modalImage.src = data.link;
-    modalImage.alt = data.name;
-    modalText.textContent = data.name;
-    openModal(previewImageModal);
-  });
-
-  //  previewCloseButton.addEventListener("click", closeModal);
-
-  likeButton.addEventListener("click", () => {
-    likeButton.classList.toggle("card__like-button_active");
-  });
-
-  cardImage.src = data.link;
-  cardImage.alt = data.name;
-  cardTitle.textContent = data.name;
-
-  return cardElement;
-}
-
-profileFormElement.addEventListener("submit", handleProfileFormSubmit);
-profileEditButton.addEventListener("click", () => {
-  nameInput.value = profileTitle.textContent;
-  jobInput.value = profileDescription.textContent;
-  openModal(editProfileModal);
-});
-
-profileModalCloseButton.addEventListener("click", () =>
-  closeModal(editProfileModal)
-);
-
-// Add new card button
-addNewCardButton.addEventListener("click", () => openModal(addCardModal));
-addCardModalCloseButton.addEventListener("click", () =>
-  closeModal(addCardModal)
-);
-
-initialCards.forEach((cardData) => renderCard(cardData, cardsWrap));
-
-//Form listeners
-
-addCardFormElement.addEventListener("submit", handleCardAddSubmit);
-
-closePreviewImageButton.addEventListener("click", () =>
-  closeModal(previewImageModal)
-);
+  //c
