--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,101 +1,79 @@
-const initialCards = [
-  {
-    name: "Yosemite Valley",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/yosemite.jpg",
-  },
-  {
-    name: "Lake Louise",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/lake-louise.jpg",
-  },
-  {
-    name: "Bald Mountains",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/bald-mountains.jpg",
-  },
-  {
-    name: "Latemar",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/latemar.jpg",
-  },
-  {
-    name: "Vanoise National Park",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/vanoise.jpg",
-  },
-  {
-    name: "Lago di Braies",
-    link: "https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/lago.jpg ",
-  },
-];
-
-const cardTemplate = document
-  .querySelector("#card-template")
-  .content.querySelector(".card");
-
-//Wrapppers
-const cardsWrap = document.querySelector(".cards__list");
-const editProfileModal = document.querySelector("#edit-modal");
-const addCardModal = document.querySelector("#add-card-modal");
-const profileFormElement = editProfileModal.querySelector(".modal__form");
-const addCardFormElement = addCardModal.querySelector(".modal__form");
-const previewImageModal = document.querySelector("#previewImageModal");
-const modalImage = document.querySelector("#modalImage");
-const modalText = document.querySelector("#modalText");
-// Buttons and Other DOM nodes
-
-const profileEditButton = document.querySelector(".profile__edit-button");
-const profileModalCloseButton = editProfileModal.querySelector(".modal__close");
-const addCardModalCloseButton = addCardModal.querySelector(".modal__close");
-const profileTitle = document.querySelector(".profile__title");
-const profileDescription = document.querySelector(".profile__description");
-const addNewCardButton = document.querySelector(".profile__add-button");
-const closePreviewImageButton = document.querySelector("#previewCloseBtn");
-
-//Form Data
-const nameInput = profileFormElement.querySelector(".modal__input_type_name");
-const jobInput = profileFormElement.querySelector(
-  ".modal__input_type_description"
-);
-const cardTitleInput = addCardFormElement.querySelector(
-  ".modal__input_type_title"
-);
-const cardUrlInput = addCardFormElement.querySelector(".modal__input_type_url");
-
-function closeModal(modal) {
-  modal.classList.remove("modal_opened");
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  border-radius: 10px;
+  overflow: hidden;
+  max-width: 282px;
 }
 
-function openModal(modal) {
-  modal.classList.add("modal_opened");
+.card__image {
+  width: 282px;
+  height: 282px;
+  min-height: 282px;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-function renderCard(cardData, wrapper) {
-  const cardElement = getCardElement(cardData);
-  wrapper.prepend(cardElement);
+.card__title {
+  margin: 0;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  line-height: 29px;
+  font-weight: 900;
+  max-width: 193px;
 }
 
-function handleProfileFormSubmit(evt) {
-  evt.preventDefault();
-  profileTitle.textContent = nameInput.value;
-  profileDescription.textContent = jobInput.value;
-  closeModal(editProfileModal);
+.card__description {
+  display: flex;
+  background-color: white;
+  color: black;
+  padding: 20px 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-function handleCardAddSubmit(evt) {
-  evt.preventDefault();
-  const name = cardTitleInput.value;
-  const link = cardUrlInput.value;
-  renderCard({ name, link }, cardsWrap);
-
-  closeModal(addCardModal);
-  addCardFormElement.reset();
+.card__like-button {
+  background: transparent url("../images/like-inactive.svg") center no-repeat;
+  width: 21px;
+  height: 18px;
+  padding-right: 20px;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
-function getCardElement(data) {
-  // clone the template element with all its content and store it in a cardElement variable
-  // access the card title and image and store them in variables
-  const cardElement = cardTemplate.cloneNode(true);
-  const cardImage = cardElement.querySelector(".card__image");
-  const cardTitle = cardElement.querySelector(".card__title");
-  const likeButton = cardElement.querySelector(".card__like-button");
+.card__like-button_active {
+  background-image: url(../images/like-active.svg);
+}
 
-  //find the delete button
-  //add the event listener to the delete button
-  //c
+.card__like-button:hover {
+  opacity: 50%;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.card__delete-button {
+  position: absolute;
+  background-image: url(../images/Trash.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  width: 18px;
+  height: 19.3px;
+  right: 0;
+  top: 0px;
+  padding-top: 50px;
+  padding-right: 45px;
+}
+
+.card__delete-button:hover {
+  opacity: 60%;
+  transition: 0.4s;
+  cursor: pointer;
+}
