--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,15 +1,7 @@
 .profile {
   display: flex;
-  align-items: center;
-  padding-top: 40px;
-}
-
-.profile__image {
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 24px;
+  max-width: 880px;
+  margin: auto;
 }
 
 .profile__info {
@@ -18,50 +10,56 @@
     "title button"
     "description description";
   grid-template-columns: minmax(auto, 373px) auto;
-  grid-gap: 7px 17px;
-}
-
-.profile__title {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 42px;
-  line-height: 48px;
-  font-weight: 500;
-  grid-area: title;
-  margin: 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .profile__edit-button {
-  background: transparent url(../images/pointer-pen.svg) center no-repeat;
+  background: transparent url(../images/edit-icon.svg) center no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
-  align-self: center;
-  border: 1px solid #fff;
-  padding: 0;
-  margin: 0;
-}
-.profile__edit-button:hover {
-  opacity: 60%;
-  transition: 0.02s;
+  box-sizing: border-box;
+  border: 1px solid #ffffff;
+  margin-left: 18px;
   cursor: pointer;
+  background-size: 10px;
+  margin-top: 77px;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
 
 .profile__add-button {
-  background: transparent url(../images/button.svg) center no-repeat;
-  width: 150px;
+  background: transparent url(../images/add-icon.svg) center no-repeat;
   height: 50px;
+  width: 150px;
   margin-left: auto;
+  box-sizing: border-box;
   border: 2px solid #ffffff;
   border-radius: 2px;
+  cursor: pointer;
+  background-size: 22px;
+  margin-bottom: 86px;
+  margin-top: 75px;
 }
 
 .profile__add-button:hover {
-  opacity: 60%;
-  transition: 0.02s;
-  cursor: pointer;
+  opacity: 0.6;
+}
+
+.profile__title {
+  grid-area: title;
+  margin: 0;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 48px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 373px;
+  margin-top: 62px;
 }
 
 .profile__description {
@@ -70,63 +68,142 @@
   font-weight: 400;
   grid-area: description;
   margin: 0;
-  text-overflow: ellipsis;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  padding-top: 16px;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 373px;
+  text-overflow: ellipsis;
+  max-width: 415px;
+  margin-bottom: 72px;
 }
 
-@media screen and (max-width: 879px) {
+.profile__image {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  background-position: center;
+  margin-right: 24px;
+  margin-bottom: 47.25px;
+  margin-top: 36.25px;
+}
+
+@media screen and (max-width: 800px) {
+  .profile__add-button {
+    max-width: 50px;
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 770px) {
   .profile {
-    max-width: 575px;
-    padding-top: 37px;
-    padding-bottom: 32px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
   }
-  .profile__image {
-    margin-left: 0;
-  }
+
   .profile__info {
-    margin-right: 0;
-    max-width: 240px;
+    grid-template-columns: minmax(auto, 340px) auto;
   }
+
+  .profile__add-button {
+    max-width: 581px;
+  }
+
+  .profile__edit-button {
+    margin-top: 9px;
+  }
+
+  .profile__image {
+    margin-right: 0;
+  }
+
+  .profile__title {
+    font-size: 32px;
+    line-height: 38px;
+    max-width: 340px;
+    text-align: center;
+    margin-left: auto;
+    grid-area: title;
+    margin-top: 0;
+  }
+
+  .profile__description {
+    text-align: center;
+    padding-bottom: 36px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 618px) {
   .profile__title {
     font-size: 22px;
     line-height: 27px;
-    max-width: 200px;
-    min-width: 170px;
   }
-  .profile__edit-button {
-    height: 18px;
-    width: 18px;
-  }
-  .profile__add-button {
-    margin-right: 0;
-  }
-}
-@media screen and (max-width: 580px) {
-  .profile {
-    width: 100%;
-    margin: 0;
-    flex-direction: column;
-    padding-bottom: 1px;
-  }
-  .profile__image {
-    margin: 0;
+
+  .profile__info {
+    grid-template-columns: minmax(auto, 196px) auto;
   }
 
   .profile__description {
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
   }
-  .profile__info {
-    justify-content: center;
-    gap: 14px 10px;
-    margin-top: 30px;
-    margin-bottom: 36px;
+
+  .profile__edit-button {
+    margin-top: 0px;
   }
+
   .profile__add-button {
-    margin: 0 auto;
     width: 282px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    max-width: 282px;
+  }
+
+  .profile__info {
+    grid-template-columns: minmax(auto, 282px) auto;
+  }
+
+  .profile__description {
+    max-width: 282px;
+    padding: 0;
+    margin-top: 14px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 0;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    padding: 0;
+    margin-top: 36px;
+    margin-bottom: 0;
+    background-size: 16px;
+  }
+
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+    margin-left: 10px;
+    margin-right: 34px;
+    margin-top: 4px;
+    background-size: 7.5px;
+  }
+
+  .profile__image {
+    margin-bottom: 26.25px;
+    margin-top: 38.25px;
+  }
+
+  .profile__title {
+    margin-left: 62px;
+    line-height: 27px;
+    text-align: center;
+    min-width: 196px;
+    max-width: 230px;
   }
 }
