--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,79 +1,81 @@
+.card__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+}
+
 .card {
-  position: relative;
   display: flex;
   flex-direction: column;
-  list-style: none;
   border-radius: 10px;
+  list-style: none;
   overflow: hidden;
-  max-width: 282px;
+  position: relative;
 }
 
 .card__image {
   width: 282px;
   height: 282px;
-  min-height: 282px;
-  object-fit: cover;
   cursor: pointer;
-}
-
-.card__title {
-  margin: 0;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  line-height: 29px;
-  font-weight: 900;
-  max-width: 193px;
 }
 
 .card__description {
   display: flex;
   background-color: white;
   color: black;
-  padding: 20px 20px;
-  align-items: center;
+  padding: 25px 20px;
+  justify-items: center;
   justify-content: space-between;
+  align-items: center;
+}
+
+.card__title {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  line-height: 29px;
+  font-weight: 900;
+  font-size: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
+  max-width: 214px;
 }
 
 .card__like-button {
-  background: transparent url("../images/like-inactive.svg") center no-repeat;
+  background: transparent url(../images/like-inactive.svg) center no-repeat;
   width: 21px;
   height: 18px;
-  padding-right: 20px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-top: 0;
   border: none;
-  margin: 0;
-  padding: 0;
 }
 
 .card__like-button_active {
-  background-image: url(../images/like-active.svg);
+  background: url(../images/like-active.svg);
 }
 
 .card__like-button:hover {
-  opacity: 50%;
-  transition: 0.4s;
+  opacity: 0.5;
   cursor: pointer;
 }
 
 .card__delete-button {
   position: absolute;
-  background-image: url(../images/Trash.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: transparent;
-  border: none;
+  background: url(../images/delete-button-inactive.svg);
   width: 18px;
-  height: 19.3px;
-  right: 0;
-  top: 0px;
-  padding-top: 50px;
-  padding-right: 45px;
+  height: 18px;
+  border: 0;
+  top: 18px;
+  right: 15px;
 }
 
 .card__delete-button:hover {
-  opacity: 60%;
-  transition: 0.4s;
   cursor: pointer;
+  opacity: 0.6;
 }
