--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,158 +1,251 @@
 .modal {
   position: fixed;
   top: 0;
-  left: 0;
   bottom: 0;
+  left: 0;
+  z-index: 999;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  padding: 0 19px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 19px;
   opacity: 0;
-transition: visibility 0.5s, opacity 0.5s linear;
-}
-
-.modal_opened {
-  /* display: flex; */
-  visibility: visible;
-  opacity: 1;
+  transition: visibility 0.5s, opacity 0.5s linear;
 }
 
 .modal__container {
-  background-color: #fff;
-  margin: auto;
-  padding: 36px;
+  background-color: white;
   border-radius: 10px;
   position: relative;
+  color: #000;
+  max-width: 430px;
+  max-height: 330px;
+  padding: 34px 36px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
   width: 430px;
-  height: 330px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  display: grid;
-  box-sizing: border-box;
 }
-.modal__text {
-  color: #fff;
-  font-family: Inter;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 15px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-.modal__image-container {
-  position: relative;
-}
+
 .modal__close {
-  position: absolute;
-  background-color: transparent;
-  cursor: pointer;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
+  background-image: url(../images/close.svg);
   border: none;
+  background-color: transparent;
+  outline: none;
   width: 40px;
   height: 40px;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url(../images/Modal-Close\ Icon.svg);
+  position: absolute;
+  top: -45px;
+  right: -45px;
+  cursor: pointer;
+  padding: 0;
 }
 
 .modal__close:hover {
   opacity: 0.5;
-  transition: opacity 0.5s ease;
-  cursor: pointer;
 }
 
-.modal__title {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  color: #000;
+.modal__heading {
   font-size: 24px;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
-  line-height: 29px;
-  letter-spacing: 0em;
-  text-align: left;
-  width: auto;
-  min-height: 23px;
+  line-height: 29.05px;
+  color: #000;
+  height: 23px;
   margin-top: 0;
-  margin-bottom: 0;
+}
+
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .modal__input {
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  border-bottom-color: #000;
-  border-bottom-width: 1px;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.94px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.20000000298023224);
   border-top: none;
   border-left: none;
   border-right: none;
+  margin-top: 30px;
+  max-height: 27px;
+  padding-bottom: 13px;
   width: 100%;
-  height: 27.26px;
-  margin-top: 0;
-  margin-bottom: 29.74px;
 }
 
-.modal__form-item:last-of-type {
-  margin-bottom: 48px;
+.modal__input::placeholder {
+  color: #000;
 }
 
 .modal__button {
-  display: block;
-  background-color: #000;
-  color: #fff;
-  border-radius: 2px;
-  font-weight: 400;
-  line-height: 22px;
   width: 100%;
   height: 50px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 18px;
-  padding: 0;
-  margin-top: 19px;
+  line-height: 22px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+  border-radius: 2px;
   border: none;
+  margin-top: 48px;
+  cursor: pointer;
 }
 
 .modal__button:hover {
-  cursor: pointer;
-  opacity: 0.8;
-  transition: opacity 0.5s ease;
+  opacity: 0.5;
 }
 
-.modal__image {
-  max-width: 75vw;
+.modal_is-opened {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
+.modal__card-image-preview {
+  max-width: 100%;
   max-height: 75vh;
+}
+.modal__title {
+  color: #fff;
+  font-family: Inter, Arial, sans-serif;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  height: 12px;
+  top: 640px;
+  margin-bottom: 0;
+}
+
+.modal__image-close-button {
+  background-image: url(../images/close.svg);
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  color: #ffffff;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  padding: 0;
+  left: calc(100% + 5px);
+  bottom: calc(100% + 5px);
+}
+
+.modal__image-close-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.modal__image-container {
+  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.modal__button_disabled {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: #ffffff;
+  color: rgba(0, 0, 0, 0.2);
+  cursor: default;
+}
+
+.modal__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  transition: opacity 0.3s;
+  width: 358px;
+  position: absolute;
+  font-family: Inter, sans-serif, serif;
+  font-weight: 400;
+  left: 0;
+  top: calc(100% + 5px);
+}
+
+.modal__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
+.modal__label {
+  position: relative;
+  margin: 0;
+}
+
+.modal__button_disabled:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 875px) {
+  .modal__image-close-button {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: calc(100% - 37px);
+    bottom: calc(100% + 20px);
+  }
 }
 
 @media screen and (max-width: 630px) {
-  .modal__container {
-    width: 282px;
-    height: 322px;
-    padding: 0px 19px;
+  .modal {
+    padding: 0 19px;
   }
+
   .modal__close {
+    top: -56px;
+    right: 0px;
+    width: 26px;
     height: 26px;
-    left: 250px;
-    bottom: calc(100% + 35px);
-    width: auto;
-    padding: 0 20;
-    margin-right: 40px;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 618px) {
+  .modal__container {
+    max-width: 282px;
+    max-height: 322px;
+    padding: 25px 22px;
   }
 
-  .modal__title {
-    width: auto;
-    margin-top: 25px;
-    margin-bottom: 25px;
+  .modal__heading {
+    margin-bottom: 75px;
+    max-width: 238px;
+    font-size: 18px;
   }
 
-  .modal__form {
-    width: 238px;
-  }
-
-  .modal__form-item {
-    width: auto;
+  .modal__input {
+    max-height: 27px;
+    font-size: 14px;
+    height: 14px;
   }
 
   .modal__button {
-    height: 46px;
+    max-height: 46px;
+    margin-top: 15px;
+    text-align: center;
+    font-size: 14px;
+    font-family: "Inter", Arial, sans-serif;
+    padding: 14px 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .modal__image-close-button {
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    left: calc(100% - 26px);
+    bottom: calc(100% + 20px);
   }
 }
