--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,32 +1,28 @@
 .page {
   background-color: black;
-}
-.page__section {
-  max-width: 880px;
-  width: 100%;
-  position: relative;
-  margin: 0 auto;
-  box-sizing: border-box;
   color: white;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-left: 19px;
+  padding-right: 19px;
 }
 
 .page__content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
-@media screen and (max-width: 596px) {
-  .header {
-    width: 320px;
-    max-width: 100%;
-  }
-  .header__image {
-    width: 126px;
-    height: 24px;
-    margin-left: 27px;
-    padding-bottom: 32px;
-    margin-top: 28px;
+.page__section {
+  max-width: 880px;
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 480px) {
+  .page {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
