--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,23 +1,47 @@
 .footer {
-  display: flex;
-  justify-content: flex-start;
-  align-content: center;
+  max-width: 880px;
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
 }
 
-.footer__copyright {
-  color: #545454;
-  font-family: "Inter", sans-serif;
-  font-size: 18px;
+.footer__content {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
   font-weight: 400;
+  font-size: 18px;
   line-height: 22px;
-  margin: 67px auto 60px 0;
+  color: #545454;
+  padding-bottom: 60px;
+  padding-top: 67px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
-  .footer__copyright {
+@media screen and (max-width: 915px) {
+  .footer {
+    max-width: 581px;
+  }
+}
+
+@media screen and (max-width: 618px) {
+  .footer {
+    max-width: 282px;
+  }
+
+  .footer__content {
+    max-width: 282px;
+    margin: auto;
+    margin-top: 48px;
+    margin-bottom: 36px;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer__content {
+    margin-right: 19px;
     font-size: 14px;
     line-height: 17px;
-    margin: 48px auto 36px 19px;
-    max-width: 282px;
   }
 }
