--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,8 +1,17 @@
-.card__list {
+.cards {
+  font-family: "Inter", sans-serif;
+  font-weight: 900;
+  line-height: 1.2;
+  /* padding: 15px 0 36px; */
+  margin: 0 auto;
+}
+
+.cards__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
+  list-style-type: none;
   padding: 0;
   margin: 0;
 }
@@ -10,15 +19,15 @@
 .card {
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
   list-style: none;
-  overflow: hidden;
   position: relative;
 }
 
 .card__image {
   width: 282px;
   height: 282px;
+  border-radius: 10px 10px 0 0;
+  margin-right: 0;
   cursor: pointer;
 }
 
@@ -26,56 +35,61 @@
   display: flex;
   background-color: white;
   color: black;
-  padding: 25px 20px;
-  justify-items: center;
-  justify-content: space-between;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
   align-items: center;
+  justify-content: space-between;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  gap: 5px;
 }
 
 .card__title {
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
-  line-height: 29px;
   font-weight: 900;
-  font-size: 24px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  line-height: 1.2;
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin: 0;
-  max-width: 214px;
 }
 
 .card__like-button {
-  background: transparent url(../images/like-inactive.svg) center no-repeat;
+  background: transparent url(../images/like-icon.svg) center no-repeat;
+  height: 19px;
   width: 21px;
-  height: 18px;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 0;
-  padding-top: 0;
   border: none;
+  background-size: 21px 18px;
+  border-radius: 0 0 10px;
+  flex-shrink: 0;
+  cursor: pointer;
 }
 
 .card__like-button_active {
-  background: url(../images/like-active.svg);
+  background-image: url(../images/like-active.svg);
 }
 
 .card__like-button:hover {
   opacity: 0.5;
-  cursor: pointer;
+  transition: 0.1s;
 }
 
 .card__delete-button {
+  background: transparent url(../images/trash-icon.svg) center no-repeat;
   position: absolute;
-  background: url(../images/delete-button-inactive.svg);
   width: 18px;
-  height: 18px;
-  border: 0;
+  height: 19px;
+  border: none;
   top: 18px;
   right: 15px;
+  cursor: pointer;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .card__delete-button:hover {
-  cursor: pointer;
-  opacity: 0.6;
+  opacity: 0.5;
+  transition: 0.1s;
 }
