--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,28 +1,33 @@
 .page {
+  font-family: "Inter", sans-serif;
   background-color: black;
   color: white;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding-left: 19px;
-  padding-right: 19px;
-}
-
-.page__content {
-  display: flex;
-  flex-direction: column;
-  max-height: 100vh;
 }
 
 .page__section {
   max-width: 880px;
   width: 100%;
+  box-sizing: border-box;
   position: relative;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 480px) {
-  .page {
-    padding-left: 0;
-    padding-right: 0;
+.page__content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+@media (min-width: 627px) and (max-width: 768px) {
+  .page__section {
+    max-width: calc(100% - 60px);
+    margin: 0 30px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 942px) {
+  .page__section {
+    max-width: calc(100% - 40px);
+    margin: 0 20px;
   }
 }
