--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,25 +1,23 @@
 .footer {
-  padding: 67px 0 60px 0;
+  max-width: 880px;
+  padding-top: 67px;
+  padding-bottom: 60px;
 }
-
-.footer__image {
-  background-color: transparent;
-}
-
 .footer__copyright {
-  font-family: Inter, sans-serif, serif;
-  font-style: normal;
+  font-family: "inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 21.78px;
   color: #545454;
   margin: 0;
-  padding: 0;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 544px) {
   .footer {
-    padding: 48px 0 36px 19px;
+    max-width: 282px;
+    padding-top: 48px;
+    padding-bottom: 36px;
+    margin: 0;
   }
   .footer__copyright {
     font-size: 14px;
