--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -1,244 +1,183 @@
-.modal {
+.popup {
   position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
   background-color: rgba(0, 0, 0, 0.5);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
-  box-sizing: border-box;
-  padding-left: 19px;
-  padding-right: 19px;
+  padding: 0 19px;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s linear 0.25s, opacity 0.25s linear;
+  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
-.modal_opened {
+.popup_opened {
   visibility: visible;
   opacity: 1;
-  transition-delay: 0s;
+  transition: visibility 0s, opacity 0.6s linear;
 }
 
-.modal__container {
-  color: #000;
-  width: 430px;
-  height: 330px;
-  max-width: 100%;
+.popup__container {
   background-color: #fff;
-  padding: 34px 36px 36px 36px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  padding: 36px;
   border-radius: 10px;
-  box-sizing: border-box;
   position: relative;
+  width: 358px;
+  max-width: 100%;
 }
 
-.modal__form {
-  padding: 0;
-  margin: 0;
-}
-
-.modal__exit-button {
-  position: absolute;
-  top: -45px;
-  right: -45px;
-  background-image: url("../images/Close\ Icon.svg");
-  width: 40px;
-  height: 40px;
-  background-position: center;
-  background-size: cover;
+.popup__close-button {
+  background-image: url(../images/Close-icon.svg);
   border: none;
   background-color: transparent;
-  transition: opacity 0.1s linear;
-}
-
-.modal__exit-button_image {
-  position: absolute;
-  top: -45px;
-  right: -45px;
-  background-image: url("../images/Close\ Icon.svg");
   width: 40px;
   height: 40px;
-  background-position: center;
-  background-size: cover;
-  border: none;
-  background-color: transparent;
-  transition: opacity 0.1s linear;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: calc(100% + 5px);
+  left: calc(100% + 5px);
 }
 
-.modal__exit-button_image:hover {
+.popup__close-button:hover {
+  color: #fff;
   opacity: 0.6;
   cursor: pointer;
 }
 
-.modal__exit-button:hover {
-  opacity: 0.4;
-  cursor: pointer;
-}
-
-.modal__container-title {
-  font-family: Inter, sans-serif, serif;
+.popup__heading {
+  color: #000;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  margin-top: 0;
-  margin-bottom: 54px;
-}
-
-.modal__form-fieldset {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-.input-field {
-  position: relative;
-  margin: 0 0 30px 0;
-}
-
-.modal__form-input {
+  max-width: 330px;
   width: 100%;
-  font-family: Inter, sans-serif, serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  padding-bottom: 13px;
-  border: none;
-  border-bottom: solid 1px;
-  border-color: rgb(0, 0, 0, 0.2);
-  outline: none;
+  max-height: 23px;
+  height: 100%;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 54px;
 }
 
-.modal__submit-button {
+.popup__form {
+  display: flex;
+  flex-direction: column;
+  width: 358px;
+}
+
+.popup__input::placeholder {
+  color: #c4c4c4;
+}
+
+.popup__input {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  border: none;
+  padding-bottom: 13px;
+  margin-top: 13px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100%;
+}
+
+.popup__save-button {
   width: 100%;
   height: 50px;
-  background-color: black;
-  color: white;
-  font-family: Inter;
+  background-color: #000;
+  color: #fff;
+  font-family: "Inter";
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 18px 0 0 0;
-  cursor: default;
+  align-content: center;
   border: none;
-  transition: opacity 0.1s linear, background-color 0.3s ease, color 0.3s ease;
+  margin-top: 18px;
+  padding: 0;
 }
 
-.modal__submit-button:hover {
+.popup__save-button:hover:not(:disabled) {
   opacity: 0.8;
   cursor: pointer;
 }
-
-.modal_image {
-  position: fixed;
-  align-items: flex-start;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.9);
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
-  box-sizing: border-box;
-  padding-left: 19px;
-  padding-right: 19px;
+.popup__save-button_disabled:hover {
+  opacity: 0.2;
+  cursor: default;
+}
+.popup__save-button_disabled {
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: #000;
+  opacity: 0.2;
 }
 
-.modal__image-container {
-  color: #fff;
-  max-height: 100%;
-  max-width: 100%;
-  background-color: transparent;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-radius: 10px;
-  box-sizing: border-box;
-  position: relative;
-  margin: 70px 90px;
+.popup__input_type_error {
+  visibility: visible;
+  border-bottom: 1px solid #ff0000;
 }
 
-.modal__card-image {
-  max-width: 100%;
-  max-height: 80vh;
-  object-fit: contain;
-}
-
-.modal__image-title {
-  font-family: Inter, sans-serif, serif;
-  font-weight: 400;
+.popup__error_visible {
+  font-family: "Inter", Arial, sans-serif;
   font-size: 12px;
-  line-height: 14.5px;
-  margin-top: 10px;
+  line-height: 14.52px;
+  font-weight: 400;
+  color: red;
+  padding-top: 5px;
 }
 
-@media screen and (max-width: 450px) {
-  .modal__container {
-    width: 282px;
-    height: 322px;
-    padding: 25px 22px;
+@media screen and (max-width: 880px) {
+  .popup {
+    top: 123px;
   }
 
-  .modal__exit-button {
-    top: -55px;
-    right: 0;
+  .popup__container {
+    margin: 0;
+    max-height: 322px;
+    max-width: 282px;
+    box-sizing: border-box;
+    padding: 0;
   }
-
-  .modal__container-title {
-    margin-bottom: 75px;
+  .popup__heading {
     font-size: 18px;
     line-height: 22px;
+    margin: 25px 0 0;
+    padding: 0 22px 76px;
+    max-width: 238px;
+  }
+  .popup__form {
+    padding: 0 22px 0;
+    width: 238px;
+  }
+  .popup__input_type_title {
+    margin-top: 0;
+    max-width: 100%;
+  }
+  .popup__close-button {
+    width: 26px;
+    height: 26px;
+    left: calc(100% + 3px);
+    bottom: calc(100% + 3px);
   }
 
-  .modal__submit-button {
+  .popup__input_type_description {
+    margin-top: 0;
+    padding-top: 30px;
+    padding-bottom: 13px;
+    margin-bottom: 45px;
+    margin-bottom: 0;
+    max-width: 100%;
+  }
+  .popup__save-button {
+    height: 46px;
+    margin-bottom: 25px;
     font-size: 14px;
-    line-height: 17px;
+    margin-top: 16px;
+    padding: 0;
   }
-
-  .modal__image-container {
-    max-width: 240px;
-    margin: 134px 20px;
-  }
-
-  .modal__exit-button_image {
-    height: 30px;
-    width: 30px;
-    top: -35px;
-    right: -35px;
-  }
-}
-
-.modal__submit-button-inactive {
-  background-color: #fff;
-  color: gray;
-  user-select: none;
-  border-color: gray;
-  border-style: solid;
-}
-
-.modal__submit-button-inactive:hover {
-  cursor: default;
-  opacity: 1;
-}
-
-.modal__error-message {
-  font-family: Inter, sans-serif, serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14.5px;
-  color: #ff0000;
-  position: absolute;
-  left: 0;
-  top: calc(100% + 3px);
-  z-index: 5;
-}
-
-.modal__input_type_error {
-  border-color: #ff0000;
 }
